# Rust-GB

./: .gitignore  Cargo.toml
.github/workflows/: test.yml
emulator-core/: Cargo.toml
emulator-core/src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  joypad.rs  lib.rs  ppu.rs  serial.rs  timer.rs
emulator-core/src/apu/: channel_1.rs  channel_2.rs  channel_3.rs  channel_4.rs
emulator-native/: Cargo.toml
emulator-native/src/: main.rs  samples_queue.rs
emulator-web/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.ts
emulator-web-old/: .index.html.swp  Cargo.toml  index.html
emulator-web/js/: index.ts
emulator-web/src/: lib.rs  main.rs
emulator-web/static/: index.html  main.css
src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  joypad.rs  main.rs  mmu.rs  ppu.rs  samples_queue.rs  serial.rs  timer.rs
src/apu/: channel_1.rs  channel_2.rs  channel_3.rs  channel_4.rs
