[package]
name = "emulator-core"
version = "0.1.0"
authors = ["quantatic"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.2"
# Ensure instant is wasm-comptible when compiling with wasm-bindgen.
instant = "0.1.12"

[features]
wasm-bindgen = ["instant/wasm-bindgen", "instant/inaccurate"]
