[package]
name = "emulator-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
emulator-core = { path = "../emulator-core" }
js-sys = "0.3.55"
pixels = "0.8.0"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
web-sys = { version = "0.3.55", features = ["AudioBuffer", "AudioBufferOptions", "AudioBufferSourceNode", "AudioContext", "AudioDestinationNode", "BaseAudioContext", "console", "Document", "Element", "EventTarget", "HtmlCanvasElement", "Window"] }
winit = { version = "0.25.0", features = ["web-sys"] }
wgpu = { version = "0.11", features = ["webgl"] }