# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
emulator-core = { path = "../emulator-core", features = ["wasm-bindgen"]}
wasm-bindgen = "0.2.80"
wee_alloc = "0.4.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.30"
futures = "0.3.21"
js-sys = "0.3.57"
wasm-bindgen-futures = "0.4.30"

[profile.release]
panic = "abort"